Dec 12/17 Update
Crash Fixex
Bandwidth Optimizations
Image Processing Improvements